[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/base/element/element.gd" type="Script" id=1]
[ext_resource path="res://scenes/base/element/dissolve_texture.tres" type="Texture" id=2]
[ext_resource path="res://scenes/base/element/element_shader.gdshader" type="Shader" id=3]

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 3 )
shader_param/outline_width = 1.0
shader_param/outline_color = null
shader_param/is_outlined = false
shader_param/is_dissolve = false
shader_param/texture_size = Vector2( 137, 137 )
shader_param/stripe_color = null
shader_param/stripe_width = 4.0
shader_param/stripe_bias = 2.0
shader_param/is_striped = false
shader_param/is_created = false
shader_param/dissolveNoise = ExtResource( 2 )

[sub_resource type="Animation" id=3]
resource_name = "Delete"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.833333 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.833333 ) ]
}

[node name="Element" type="Node2D" groups=["Elements"]]
script = ExtResource( 1 )
type = null

[node name="FirstArea" type="Area2D" parent="."]
collision_mask = 0
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="FirstArea"]
__meta__ = {
"_edit_lock_": true
}

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.833333 )
material = SubResource( 5 )

[node name="SafeArea" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="SafeArea"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Delete = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="Connectors" type="Node2D" parent="."]

[connection signal="mouse_entered" from="FirstArea" to="." method="_on_FirstArea_mouse_entered"]
[connection signal="mouse_exited" from="FirstArea" to="." method="_on_FirstArea_mouse_exited"]
[connection signal="area_entered" from="SafeArea" to="." method="_on_SafeArea_area_entered"]
[connection signal="area_exited" from="SafeArea" to="." method="_on_SafeArea_area_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
